# parse_tree_of_mathematical_expressions

./: .gitignore  CMakeLists.txt  README.md  doxygen_log.txt  exmpForReadme_grav.dot  exmpForReadme_tex.tex  gr1.dot  gr1.tex  main.cpp  test1.txt  tex1.tex
docs/html/: annotated.html  class_add-members.html  class_add.html  class_div-members.html  class_div.html  class_mul-members.html  class_mul.html  class_pair-members.html  class_pair.html  class_sub-members.html  class_sub.html  class_token-members.html  class_token.html  class_token__inherit__graph.map  class_token__inherit__graph.md5  class_un_minus-members.html  class_un_minus.html  class_var-members.html  class_var.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_4c29f6c5e99ca759d1475628ee9d55fb.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68372674d70ec485d553e74681ff3bdc.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9614d03d55a7f5f310220d76a3c5cbd5.html  dir_c2d79c9e475093acfbd34d34e147a428.html  dir_ea05a26664c01ae5cdc858f971e0d772.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f942a7a73394fda25d4213a70555b3f8.html  dir_f9efb355b313d1a381f9bca76297989c.html  dir_ff571f01641f2f2e68e470c0504fbbb5.html  files.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  index.html  (+10 more)
docs/html/search/: all_0.js  all_1.js  all_7.js  (+6 more)
src/: math_tree.cpp  math_tree.h  treeExpr.cpp
test/: Tex1.tex  gr1.dot  gr1.txt  te_grav.dot  te_tex.tex  test1.txt  test1_grav.dot  test1_tex.tex  testRed.tex  testRed.txt
